# optimize-resume-multi-agent

./: README.md
backend/: .gitignore  alembic.ini  justfile  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  lifecycle.py  llm.py  models.py  routes.py
backend/app/modules/auth/: deps.py  exceptions.py  interface.py  models.py  repos.py  routes.py  schemas.py  services.py  utils.py
backend/app/modules/job/: deps.py  exceptions.py  interface.py  models.py  repos.py  routes.py  schemas.py  services.py
backend/app/modules/optimization/: deps.py  exceptions.py  graph.py  interface.py  models.py  repos.py  routes.py  schemas.py  services.py
backend/app/modules/optimization/agents/: gap_detector.py  jd_analyzer.py  resume_extractor.py
backend/app/modules/resume/: deps.py  exceptions.py  interface.py  models.py  repos.py  routes.py  schemas.py  services.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 2025-08-04_create_tables.py  2025-08-10_create_tables.py
frontend/: package.json
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/signin/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/components/: main-header.tsx
frontend/src/features/auth/: types.ts
frontend/src/features/jobs/: types.ts
frontend/src/features/optimization/: types.ts
frontend/src/features/resumes/: types.ts
frontend/src/lib/: consts.ts  fetcher.ts  utils.ts
frontend/src/providers/: auth-provider.tsx  react-query-provider.tsx
frontend/src/stores/: useSelectionStore.ts
(+26 files in other folders)
